# distributor

./: Anchor.toml  Cargo.toml  README.md
api/: Cargo.toml
api/src/: error.rs  main.rs  router.rs
cli/: Cargo.toml
merkle-tree/: Cargo.toml
merkle-tree/src/: airdrop_merkle_tree.rs  merkle_tree.rs  tree_node.rs  utils.rs
programs/merkle-distributor/: Cargo.toml
programs/merkle-distributor/src/instructions/: new_claim.rs  new_distributor.rs
verify/: Cargo.toml
