[workspace]
members = [
    "api",
    "cli",
    "merkle-tree",
    "programs/*",
    "verify"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.package]
version = "0.0.1"
authors = ["Jito Labs <team@jito.wtf>"]
repository = ""
homepage = "jito.wtf"
license = ""
edition = "2021"
publish = false

[workspace.dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
axum = "0.6.2"
bytemuck = "1.14.0"
clap = { version = "3.2.25", features = ["derive", "env"] }
csv = "1.3.0"
fast-math = "0.1"
hex = "0.4.3"
http = { version = "0.2.1" }
jito-merkle-verify = { path = "verify" }
rand = "0.8.5"
serde = "1.0.137"
serde_derive = "1.0.171"
serde_json = "1.0.102"
serde_yaml = "0.9.25"
solana-program = "2.2.17"
solana-rpc-client = "2.2.17"
solana-rpc-client-api = "2.2.17"
solana-security-txt = "1.1.1"
solana-sdk = "2.2.17"
indexmap = "2.1.0"
spl-associated-token-account = "3.0.0"
static_assertions = "1.1"
thiserror = "1.0.50"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "rt", "macros", "signal"] }
tower = { version = "0.4.1", features = ["limit", "buffer", "timeout", "load-shed"] }
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = { version = "0.1.37" }
tracing-core = "0.1.32"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
